fix: 修改darkmode下，mdx加粗字体颜色

--- a/app/globals.css
+++ b/app/globals.css
@@ -10,6 +10,7 @@
 .dark .prose {
   --tw-prose-headings: var(--text);
   --tw-prose-body: var(--text);
+  --tw-prose-bold: var(--text);
 }
 .dark .prose p > code,
 .dark .prose h3 > code,
