--- a/app/globals.css
+++ b/app/globals.css
@@ -51,21 +51,24 @@ body {
 
 @keyframes clickUpAndDown {
   0% {
-    top: 0px;
+    transform: translateY(0px);
   }
-  33% {
-    top: -10px;
+  25% {
+    transform: translateY(-20px);
   }
-  66% {
-    top: 10px;
+  50% {
+    transform: translateY(0px);
+  }
+  75% {
+    transform: translateY(20px);
   }
   100% {
-    top: 0px;
+    transform: translateY(0px);
   }
 }
 
 .click-icon {
-  animation: clickUpAndDown 3s infinite ease;
+  animation: clickUpAndDown 3s infinite linear;
 }
 
 @keyframes textShowUp {
