chore: i[img](url) -> Image

--- a/app/globals.css
+++ b/app/globals.css
@@ -21,6 +21,11 @@
 body {
   color: var(--text);
 }
+
+.medium-zoom-image--opened {
+  z-index: 100;
+}
+
 @property --gradient-end {
   syntax: '<percentage>';
   initial-value: 10%;
