--- a/app/globals.css
+++ b/app/globals.css
@@ -8,6 +8,13 @@
 .medium-zoom-image--opened {
   z-index: 100;
 }
+.highlight-wrapper code span {
+  font-size: 15px !important;
+}
+.highlight-wrapper pre {
+  border-radius: 0;
+  margin-top: 0px !important;
+}
 
 #signaturePath {
   stroke-dasharray: 2400;
@@ -140,10 +147,6 @@
 ::-webkit-scrollbar-track {
   --tw-bg-opacity: 1;
   background-color: rgb(241 245 249 / 1);
-}
-
-::selection {
-  background-color: rgb(0 193 106 / 0.4);
 }
 
 @layer base {
